<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet">

    <View
        android:id="@+id/dragLine"
        style="@style/DragLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFitTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center"
        android:text="@string/feature_item_creation_fit_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/eminem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dragLine" />

    <com.eratart.baseui.view.button.ItemButton
        android:id="@+id/ibS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_margin"
        android:layout_marginTop="@dimen/margin_24"
        app:icon="@drawable/ic_size_s"
        app:layout_constraintEnd_toStartOf="@id/ibM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFitTitle"
        app:text="@string/feature_item_creation_fit_slim" />

    <com.eratart.baseui.view.button.ItemButton
        android:id="@+id/ibM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginEnd="@dimen/mini_margin"
        app:icon="@drawable/ic_size_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ibS"
        app:layout_constraintTop_toBottomOf="@id/tvFitTitle"
        app:text="@string/feature_item_creation_fit_regular" />

    <com.eratart.baseui.view.button.ItemButton
        android:id="@+id/ibL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_margin"
        android:layout_marginBottom="@dimen/margin_24"
        app:icon="@drawable/ic_size_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ibXL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ibS"
        app:text="@string/feature_item_creation_fit_comfort" />

    <com.eratart.baseui.view.button.ItemButton
        android:id="@+id/ibXL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mini_margin"
        android:layout_marginBottom="@dimen/margin_24"
        app:icon="@drawable/ic_size_xl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ibL"
        app:layout_constraintTop_toBottomOf="@id/ibM"
        app:text="@string/feature_item_creation_fit_oversize" />

</androidx.constraintlayout.widget.ConstraintLayout>