<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewHeaderBg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/gray_10_90"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="@id/clNavHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNavHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:elevation="@dimen/default_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.eratart.baseui.view.button.SmallButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:rotation="180"
            app:icon="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/feature_item_creation_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/eminem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clPhoto"
                android:layout_width="0dp"
                android:layout_height="@dimen/add_photo_btn_height"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/margin_64"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btnAddPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_add_photo_line"
                    android:foreground="@drawable/ripple_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/ivAddPhotoIcon"
                            android:layout_width="@dimen/add_photo_icon_size"
                            android:layout_height="@dimen/add_photo_icon_size"
                            android:src="@drawable/ic_photo_placeholder"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvAddPhoto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_margin"
                            android:fontFamily="@font/manrope_semibold"
                            android:text="@string/feature_item_creation_add_photo"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:textColor="@color/gray_80"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ivAddPhotoIcon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clAddedPhoto"
                    android:layout_width="@dimen/add_photo_photo_width"
                    android:layout_height="@dimen/add_photo_btn_height"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/micro_margin"
                        android:layout_marginEnd="@dimen/micro_margin"
                        app:cardBackgroundColor="@color/transparent"
                        app:cardCornerRadius="@dimen/radius_8"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/ivPhoto"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop" />
                    </androidx.cardview.widget.CardView>

                    <ImageView
                        android:id="@+id/btnDeletePhoto"
                        android:layout_width="@dimen/delete_photo_icon_size"
                        android:layout_height="@dimen/delete_photo_icon_size"
                        android:foreground="@drawable/ripple_16"
                        android:src="@drawable/ic_minus"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.eratart.baseui.view.other.SelectableItemView
                android:id="@+id/sivCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:icon="@drawable/ic_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clPhoto"
                app:title="@string/feature_item_creation_category" />

            <com.eratart.baseui.view.other.SelectableItemView
                android:id="@+id/sivSubCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:visibility="gone"
                app:icon="@drawable/ic_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sivCategory"
                app:title="@string/feature_item_creation_subcategory"
                tools:visibility="visible" />

            <com.eratart.baseui.view.other.SelectableItemView
                android:id="@+id/sivBrand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:icon="@drawable/ic_brand"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sivSubCategory"
                app:title="@string/feature_item_creation_brand" />

            <com.eratart.baseui.view.edittext.TextInputView
                android:id="@+id/tivModel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:hint="@string/feature_item_creation_model_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sivBrand" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@color/gray_28"
                app:layout_constraintTop_toBottomOf="@id/tivModel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAdditionalParams"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/feature_item_creation_model_additional_params"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/gray_80"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <com.eratart.baseui.view.other.SelectableItemView
                android:id="@+id/sivSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:icon="@drawable/ic_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAdditionalParams"
                app:title="@string/feature_item_creation_model_size" />

            <com.eratart.baseui.view.other.SelectableItemView
                android:id="@+id/sivSeason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:icon="@drawable/ic_season"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sivSize"
                app:title="@string/feature_item_creation_model_season" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@color/gray_28"
                app:layout_constraintTop_toBottomOf="@id/sivSeason" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvWardrobeParams"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/feature_item_creation_model_wardrobe_params"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/gray_80"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <com.eratart.baseui.view.other.SelectableItemView
                android:id="@+id/sivFit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:icon="@drawable/ic_fit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWardrobeParams"
                app:title="@string/feature_item_creation_model_fit" />

            <com.eratart.baseui.view.other.SelectableItemView
                android:id="@+id/sivStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:icon="@drawable/ic_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sivFit"
                app:title="@string/feature_item_creation_model_style" />

            <com.eratart.baseui.view.other.SelectableColorView
                android:id="@+id/sivColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sivStyle"
                app:title="@string/feature_item_creation_model_color"
                tools:visibility="visible" />

            <com.eratart.baseui.view.button.FilledButton
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/margin_32"
                app:isActive="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sivColor"
                app:text="@string/feature_item_creation_continue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>